--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "In this challenge, you design and build a Data Model and a RESTful API that stores data into a Relational Database.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.1",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
